2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug1723128.c:
	  Disable failing regression test for hc08.

2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/hc08/gen.c,
	  src/SDCCast.c,
	  device/include/stdbool.h:
	  _Bool / bool for hc08.

2011-08-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/SDCCpeeph.c:
	  Minor code cleanup.

2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi:
	  dont't include readline5.dll in 64bit package;
	  remove libgcc_s_sjlj-1.dll and libstdc++-6.dll on uninstallation;
	  don't install 64 bit version on 32 bit Windows;
	  use proper Program Files and registry for 64 bit installation
	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  configurable $(WINE)

2011-08-31 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: introduced WIN64 for 64bit dlls inclusion

2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Construct conflict graph again instead of trusting the one from sdcc.

2011-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tancotf.c,
	  device/lib/acosf.c,
	  device/lib/sinf.c,
	  device/lib/asincosf.c,
	  device/lib/_fsadd.c,
	  device/lib/asinf.c,
	  device/lib/printf_large.c,
	  device/lib/_divulong.c,
	  device/lib/_atof.c,
	  device/lib/cotf.c,
	  device/lib/expf.c,
	  device/lib/sincosf.c,
	  device/lib/tanf.c,
	  device/lib/sincoshf.c,
	  device/lib/cosf.c:
	  Use BOOL or _Bool.

2011-08-30 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/libcpp/lex.c:
	  reverted to revision r6084 (before sdcpp 4.6.1 synchronization),